--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,7 @@
 
 /* new section which is below the navbar starts here */
 .bg-image {
-    background-image: url("../images/bg-image-0.jpg");
+    background-image: url("images/bg-image-0.jpg");
     background-size: cover;
     background-position: center;
     /* background-color: black; */
