--- a/css/index.css
+++ b/css/index.css
@@ -248,7 +248,7 @@ button#booknow a {
 
 #form-tobook form {
     width: 100%;
-    padding: 15px 50px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -324,7 +324,7 @@ textarea {
 
 #packages-section #packages-head p,
 #service-section #service-head p {
-    border-bottom: 1px solid #FEBE10;
+    border-bottom: 2px solid #FEBE10;
 }
 
 #packages-section #packages-head #packages-heading,
@@ -348,6 +348,8 @@ textarea {
 .card {
     border: 1px solid #00a693;
     /* width: 100px; */
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .card-img,
@@ -433,6 +435,36 @@ textarea {
     font-family: 'Merriweather', serif;
 } */
 
+@media only screen and (max-width: 700px) {
+    .row {
+        --bs-gutter-x: 0rem;
+    }
+
+    #book-now-section {
+        width: 320px;
+    }
+
+    #book-now-form {
+        border-radius: 10px;
+    }
+
+    #form-tobook form {
+        width: 100%;
+        padding: 15px 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    #form-tobook form #start-end-dates {
+        /* width: 100%; */
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+}
+
 @media only screen and (min-width: 700px) {
     .main-heading {
         font-size: 30px;
@@ -464,6 +496,12 @@ textarea {
     }
 
     #form-tobook form {
-        padding: 15px 100px;
+        padding: 15px 50px;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    #form-tobook form {
+        padding: 15px 80px;
     }
 }
