--- a/css/index.css
+++ b/css/index.css
@@ -147,12 +147,12 @@ button#booknow {
     width: 130px;
     border: none;
     padding: 5px 0px;
+    margin-bottom: 10px;
+    border: 1px solid #ffc72c;
 }
 
 button#booknow:hover {
-    background: #ffffff;
-    color: #FEBE10;
-    font-weight: 400;
+    border: 1px solid #ffffff;
 }
 
 button#booknow:focus {
@@ -264,19 +264,26 @@ button#booknow a {
     gap: 5px;
 }
 
-#form-tobook form input,
+#form-tobook form .input-wrapper input,
 select,
 textarea {
+    position: relative;
     height: 50px;
-    /* width: ; */
+    width: 100%;
     /* outline: none; */
     border: 1px solid #00A693;
     padding: 0 10px;
     background-color: none;
     transition: .3s ease-in-out;
-    border-bottom: 2p solid #FFC72C;
+    border-bottom: 2px solid #FFC72C;
     border-radius: 20px;
 }
+
+/* #form-tobook form input::placeholder,
+select option::placeholder,
+textarea::placeholder {
+    color: #00a693;
+} */
 
 /* #form-tobook form input:focus,
 form select:focus,
@@ -394,6 +401,8 @@ textarea {
     width: 130px;
     border: none;
     padding: 5px 0px;
+    margin-bottom: 10px;
+    border: 1px solid #ffc72c;
 }
 
 #packages-section button#package-button:hover {
@@ -411,7 +420,201 @@ textarea {
     color: black;
 }
 
+
 /* Services styles starts here */
+/* .service-container {
+    margin-top: 50px;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border: 2px solid #8FBC8B;
+    border-radius: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+} */
+
+.service-avail {
+    display: grid;
+    /* flex-direction: column; */
+    grid-template-columns: 50% 50%;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.service-container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    /* border: 2px solid #8FBC8B; */
+    border: 2px solid #000;
+    border-radius: 50%;
+    left: 20%;
+    /* transform: translateX(-50%); */
+    display: flex;
+    /* align-items: center;
+    justify-content: center; */
+}
+
+.service-container .service-selector .service-icons {
+    position: absolute;
+    left: -50%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.service-container .service-selector .service-icons .service-img {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    transition: 0.5s;
+    border: 1px solid black;
+    box-shadow: 0 0 0 4px #ffffff,
+        0 0 0 6px #0000;
+    transform: rotate(calc(360deg/8 * var(--i)));
+    transform-origin: 170px;
+    z-index: 100;
+    overflow: hidden;
+    /* cursor: pointer; */
+}
+
+.service-container .service-selector .service-icons .service-img.img-active {
+    box-shadow: 0 0 0 6px #ffffff,
+        0 0 0 12px #FEBE10;
+}
+
+
+.service-container .service-selector .service-icons .service-img img {
+    border: 1px solid black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    transform: rotate(calc(-360deg/8 * var(--i)));
+    transition: 0.5s;
+    filter: grayscale(1);
+}
+
+.service-container .service-selector .service-icons .service-img.img-active img {
+    filter: grayscale(0);
+}
+
+/* .service-content {
+    position: absolute;
+    inset: 0;
+    overflow: hidden;
+} */
+
+.service-selector .service-spinner::before {
+    content: "";
+    position: absolute;
+    inset: 60px;
+    border: 4px solid transparent;
+    border-left: 4px solid #000;
+    border-right: 4px solid #00A693;
+    border-radius: 50%;
+    animation: animate_spin_before 5s linear infinite;
+    z-index: 1;
+    pointer-events: none;
+}
+
+@keyframes animate_spin_before {
+    0% {
+        rotate: 360deg;
+    }
+
+    100% {
+        rotate: 0deg;
+    }
+}
+
+.service-selector .service-spinner::after {
+    content: "";
+    position: absolute;
+    inset: 80px;
+    border: 4px solid transparent;
+    border-left: 4px solid #000;
+    border-right: 4px solid #FEBE10;
+    border-radius: 50%;
+    animation: animate_spin_after 2.5s linear infinite;
+    z-index: 1;
+    pointer-events: none;
+}
+
+@keyframes animate_spin_after {
+    0% {
+        rotate: 0deg;
+    }
+
+    100% {
+        rotate: 360deg;
+    }
+}
+
+
+/* Services content */
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: #d3e841; */
+}
+
+.wrapper h2 {
+    text-align: center;
+    margin: 30px 0;
+}
+
+.content-box {
+    /* width: 500px; */
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.content-card {
+    min-height: 220px;
+    width: 300px;
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 15px 30px #8FBC8B;
+    background-color: #d3e841;
+    margin: 10px 5px;
+    transition: 0.3s;
+}
+
+.content-card h3 {
+    font-size: 20px;
+}
+
+.content-card img {
+    margin-bottom: 10px;
+}
+
+.content-card p {
+    text-align: center;
+}
+
+.content-card:hover {
+    background: linear-gradient(90deg, #8FBC8B 0%, #D3E841 35%, #00a693 100%);
+    color: white;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+
 /* #service-section {
     margin-top: 100px;
     margin-bottom: 100px;
@@ -469,6 +672,10 @@ textarea {
         gap: 15px;
     }
 
+    .content-card {
+        width: 250px;
+    }
+
 }
 
 @media only screen and (min-width: 700px) {
@@ -478,6 +685,13 @@ textarea {
 
     .row #form-image {
         display: block;
+    }
+
+    #form-tobook form #start-end-dates {
+        /* width: 100%; */
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
 
